# Rhosh

./: CMakeLists.txt  IO.cpp  Output.cpp  Std.cpp  Std.h  demo.cpp  std.cpp  terminal.cpp
rhosh/: IO.h  Input.h  Output.h  std.h  terminal.h
skeleton/: CMakeLists.txt
